--- a/README
+++ b/README
@@ -1,1 +1,6 @@
+# RAMPA simmulator
 
+This program is used to evaluate the proposed method called Resource-Aware Model Partitioning and Allocation (RAMPA) in "Resource-Aware Deep Learning Model Partitioning and Allocation for Inference Tasks in Clusters with Heterogeneous Graphics Processing Units." RAMPA aims to minimize the allocation of critical resources during future deep learning (DL) service executions, ensuring that these executions are not hindered. By doing so, RAMPA enables the system to run more DL services while still meeting performance requirements. This simulator models the allocation of DL services within a GPU cluster, allowing for the evaluation of the number of services that meet performance requirements, as well as the performance metrics such as throughput and execution time.
+
+
+ConsoleApplication1のプロパティページのC/C++の全般の追加のインクルードディレクトリでboost-1_77を指定
